src/mccal/model/modelreader/antlr/ModelGrammarParser.java
package mccal.model.modelreader.antlr;// Generated from ModelGrammar.g4 by ANTLR 4.7.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ModelGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, NONZEROINT=11, INT=12, WS=13, LINE_COMMENT=14, COMMENT=15, ID=16;
	public static final int
			RULE_model_file = 0, RULE_nofagents = 1, RULE_statesdef = 2, RULE_reldef = 3,
		RULE_edge = 4, RULE_atomsdef = 5, RULE_singledef = 6, RULE_gstateslist = 7;
	public static final String[] ruleNames = {
		"model_file", "nofagents", "statesdef", "reldef", "edge", "atomsdef",
		"singledef", "gstateslist"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'N'", "'n'", "'='", "';'", "'R'", "'{'", "','", "'}'", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "NONZEROINT", 
		"INT", "WS", "LINE_COMMENT", "COMMENT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ModelGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ModelGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class model_fileContext extends ParserRuleContext {
		public NofagentsContext nofagents() {
			return getRuleContext(NofagentsContext.class,0);
		}
		public StatesdefContext statesdef() {
			return getRuleContext(StatesdefContext.class,0);
		}
		public ReldefContext reldef() {
			return getRuleContext(ReldefContext.class,0);
		}
		public AtomsdefContext atomsdef() {
			return getRuleContext(AtomsdefContext.class,0);
		}
		public model_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterModel_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitModel_file(this);
		}
	}

	public final model_fileContext model_file() throws RecognitionException {
		model_fileContext _localctx = new model_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			nofagents();
			setState(17);
			statesdef();
			setState(18);
			reldef();
			setState(19);
			atomsdef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NofagentsContext extends ParserRuleContext {
		public TerminalNode NONZEROINT() { return getToken(ModelGrammarParser.NONZEROINT, 0); }
		public NofagentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nofagents; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterNofagents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitNofagents(this);
		}
	}

	public final NofagentsContext nofagents() throws RecognitionException {
		NofagentsContext _localctx = new NofagentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nofagents);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(22);
			match(T__2);
			setState(23);
			match(NONZEROINT);
			setState(24);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatesdefContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ModelGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ModelGrammarParser.ID, i);
		}
		public StatesdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statesdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterStatesdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitStatesdef(this);
		}
	}

	public final StatesdefContext statesdef() throws RecognitionException {
		StatesdefContext _localctx = new StatesdefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statesdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				match(ID);
				setState(27);
				match(T__3);
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReldefContext extends ParserRuleContext {
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public ReldefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reldef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterReldef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitReldef(this);
		}
	}

	public final ReldefContext reldef() throws RecognitionException {
		ReldefContext _localctx = new ReldefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_reldef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(T__4);
			setState(33);
			match(T__2);
			setState(34);
			match(T__5);
			setState(35);
			edge();
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(36);
				match(T__6);
				setState(37);
				edge();
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			match(T__7);
			setState(44);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public TerminalNode NONZEROINT() { return getToken(ModelGrammarParser.NONZEROINT, 0); }
		public List<TerminalNode> ID() { return getTokens(ModelGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ModelGrammarParser.ID, i);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitEdge(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_edge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(T__8);
			setState(47);
			match(NONZEROINT);
			setState(48);
			match(T__6);
			setState(49);
			match(ID);
			setState(50);
			match(T__6);
			setState(51);
			match(ID);
			setState(52);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomsdefContext extends ParserRuleContext {
		public List<SingledefContext> singledef() {
			return getRuleContexts(SingledefContext.class);
		}
		public SingledefContext singledef(int i) {
			return getRuleContext(SingledefContext.class,i);
		}
		public AtomsdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomsdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterAtomsdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitAtomsdef(this);
		}
	}

	public final AtomsdefContext atomsdef() throws RecognitionException {
		AtomsdefContext _localctx = new AtomsdefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atomsdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(54);
				singledef();
				setState(55);
				match(T__3);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingledefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ModelGrammarParser.ID, 0); }
		public GstateslistContext gstateslist() {
			return getRuleContext(GstateslistContext.class,0);
		}
		public SingledefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singledef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterSingledef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitSingledef(this);
		}
	}

	public final SingledefContext singledef() throws RecognitionException {
		SingledefContext _localctx = new SingledefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_singledef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(ID);
			setState(63);
			match(T__2);
			setState(64);
			match(T__5);
			setState(65);
			gstateslist();
			setState(66);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GstateslistContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ModelGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ModelGrammarParser.ID, i);
		}
		public GstateslistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gstateslist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).enterGstateslist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelGrammarListener) ((ModelGrammarListener)listener).exitGstateslist(this);
		}
	}

	public final GstateslistContext gstateslist() throws RecognitionException {
		GstateslistContext _localctx = new GstateslistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_gstateslist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(ID);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(69);
				match(T__6);
				setState(70);
				match(ID);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}